--- a/file/signin.css
+++ b/file/signin.css
@@ -8,7 +8,7 @@ font-family: 'josefin sans', sans-serif;
 .head{
     height: 100vh;
   width: 100%;
-  background-image: linear-gradient(rgba(0,0,0,0.6),rgb(0,0,0,0.6)),url(image/contact-background.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.733),rgba(0, 0, 0, 0.781)),url(image/contact-background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -19,22 +19,21 @@ font-family: 'josefin sans', sans-serif;
 }
 form{
 width: 100%;
-padding: 50px;
+padding: 100px;
+/* margin-left: 15%; */
 /* align-items: center; */
 }
-.data{
-    border: 1px;
-    border-style: outset;
-    border-radius: 50px;
-}
+
 .data h1{
     font-size: 50px;
     font-weight: bolder;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: oblique;
     text-align: center;
+    color: aliceblue;
 }
 .data p{
+    color: aliceblue;
     font-size: 15px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: lighter;
@@ -52,16 +51,57 @@ padding: 50px;
     border-color: aliceblue;
 }
 .data button{
-    width: 150px;
+    width: 400px;
+    margin: 5px;
     padding: 10px;
     border-radius: 20px;
-    background-color: #ea1538;
-    color: white;
-    border-color: aliceblue;
+    background-color: white;
+    color: grey;
+    border-color: black;
 }
 .data button:hover{
-    background-color: white;
-    color:  #ea1538;
-    border-color: #ea1538;
+    background-color: grey;
+    color:  black;
+    border-color: white;
     transition: all 1s;
 }
+
+
+@media screen and (max-width: 770px) {
+    .data input, .data button{
+        width: 300px;
+       ;
+    }
+    
+  }
+  @media screen and (max-width: 550px) {
+    .data input, .data button{
+        width: 200px;
+       ;
+    }
+    form{
+        width: 100%;
+        padding: 50px;
+        /* margin-left: 15%; */
+        /* align-items: center; */
+        }
+    
+  }
+  @media screen and (max-width: 300px) {
+    .data input, .data button{
+        width: 130px;
+       ;
+    }
+    form{
+        width: 100%;
+        padding: 30px;
+        /* margin-left: 15%; */
+        /* align-items: center; */
+        }
+    .data h1{
+        font-size: 20px;
+    }
+    .data p{
+        font-size: 10px;
+    }
+  }
